# vkr_ishmaev

./: .gitignore  pyproject.toml  vkr_ishmaev.docx
backend/: .gitignore  docker-compose.yml  example.env  pyproject.toml
backend/services/ai_service/: Dockerfile  app.py
backend/services/ai_service/core/: settings.py
backend/services/ai_service/core/db_models/: __init__.py
backend/services/ai_service/core/dependencies/: __init__.py
backend/services/ai_service/core/schemas/: chat_dto.py  file_dto.py  models_dto.py  tokens_dto.py
backend/services/ai_service/core/scripts/: __init__.py
backend/services/ai_service/core/services/: __init__.py  ai_service.py  file_service.py  token_service.py
backend/services/ai_service/endpoints/v1/: __init__.py  chats.py  files.py  models.py  tokens.py
backend/services/auth_service/: Dockerfile  app.py
backend/services/auth_service/core/: settings.py
backend/services/auth_service/core/db_models/: __init__.py
backend/services/auth_service/core/schemas/: jwk.py  user_dtos.py
backend/services/auth_service/core/scripts/: __init__.py
backend/services/auth_service/core/services/: __init__.py  jwt_service.py  user_service.py
backend/services/auth_service/endpoints/: __init__.py
backend/services/auth_service/endpoints/v1/: __init__.py  (+2 more)
backend/services/nginx/nginx-conf/: default.conf  default_dev_conf.conf
backend/shared/db/: __init__.py  s3.py  sql_database.py
backend/shared/dependencies/: __init__.py
backend/shared/exceptions/: __init__.py  exception_handlers.py  exceptions.py
backend/shared/utils/: email.py
(+13 files in other folders)
