[project]
name = "vkr-ishmaev"
version = "0.1.0"
description = ""
authors = [
    {name = "Ишмаев Руслан Ильдарович",email = "ishmaev.ruslan@sogaz.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[asyncio] (>=0.115.11,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
