[project]
name = "vkr-ishmaev"
version = "0.1.0"
description = ""
authors = [
    {name = "Ишмаев Руслан Ильдарович",email = "ishmaev.ruslan@sogaz.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[asyncio] (>=0.115.11,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn[async] (>=0.34.0,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "aio-pika (==9.5.5)",
    "authlib (>=1.5.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
